#
# some news ... see also TODO for hints
#


2021-08-10 -> ## repo stuff
	      some documentatio updates

2021-08-31 -> ## code stuff
	      add signal handler thread to all application for catching SIG_TERM
	      remove all code for lcd-ctrl handling

	      ## sensor_pi stuff
              fix debug output of bmp180 infos and cpu temp

	      ## target stuff
	      regular image updates
	      update baalued and libbaalue

2021-07-31 -> ## lcd2004_i2c & poweroff stuff
	      fix ctrl fifo handling
	      add first content for lcd ctrl handling
	      add signal handler thread to catch SIG_TERM (from ruint)

2021-07-30 -> ## lcd2004_i2c stuff
	      add first parts for ctrl fifo handling

2021-07-25 -> ## target stuff
	      regular image updates

	      ## lcd2004_i2c stuff
	      fix wrong argument handling of pthread_create

2021-07-22 -> ## lcd2004_i2c stuff
	      add first part to setup a ctrl thread which handles correct
	      shutdown of the lcd (clear lcd ...)

2021-07-15 -> ## repo stuff
              add description for the rtc pcb changes
              documentation updates

              ## sensor_pi && libhelper stuff
              change resolution and output

2021-07-14 -> ## target && repo stuff
	      start to add rtc module

2021-07-13 -> ## amtrack stuff
	      "optical" changes

	      ## device stuff
	      activate bmp180 via iio/sysfs

	      ## sensor_pi && libhelper stuff
	      add get_bmp180_*() function

2021-07-12 -> ## sensor_pi && libhelper stuff
	      add get_cpu_temp() function

2021-07-10 -> ## repo stuff
              documentation updates
	      correct log parts from runit service descriptions

	      ## sensor_pi && libhelper stuff
	      add first parts to add the cpu temp amd BMP180 data

              ## database stuff
	      add additional values to database

	      ## target stuff
	      activate new runit service scripts
	      regular image updates

	      ## amtrack stuff