@@ -3,10 +3,13 @@
 #
 
 
+2021-08-31 -> ## code stuff
+	      add first macros for error handling and daemon handling
+
 2021-08-10 -> ## repo stuff
 	      some documentatio updates
 
-2021-08-31 -> ## code stuff
+2021-08-01 -> ## code stuff
 	      add signal handler thread to all application for catching SIG_TERM
 	      remove all code for lcd-ctrl handling
 
